--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,13 @@ main .container{
     width: 340px;
     border-radius: 5px;
     margin-right: 15px;
+    transition: box-shadow 0.3s ease;
+}
+
+.price_item:hover{
+    -webkit-box-shadow: 0px 5px 10px 4px rgba(34, 60, 80, 0.2);
+    -moz-box-shadow: 0px 5px 10px 4px rgba(34, 60, 80, 0.2);
+    box-shadow: 0px 5px 10px 4px rgba(34, 60, 80, 0.2);
 }
 
 .name_price{
